# obby

./: .boring  AUTHORS  COPYING  ChangeLog  FAQ  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac  configure.in  lobby-1.0.pc.in  obby-0.2.pc.in  obby-0.3.pc.in  obby-0.4.pc.in  obby-1.0.pc.in
contrib/: libobby-0.0.20050505.ebuild  libobby-20050410.ebuild
contrib/msvc8/: config.hpp  inttypes.h  libobby.vcproj
contrib/obby_web/: htaccess  obby.php  regex_ring.obby
contrib/obbyconv/: obbyconv_03_to_04
docs/: Doxyfile  boring  obby.hpp
inc/: Makefile.am  buffer.hpp  chat.hpp  client_buffer.hpp  client_document.hpp  client_document_info.hpp  client_user_table.hpp  colour.hpp  command.hpp  common.hpp  config.hpp.in  delete_operation.hpp  delete_record.hpp  delete_undo_operation.hpp  document.hpp  document_info.hpp  document_packet.hpp  duplex_signal.hpp  duplexsignal.hpp  error.hpp  format_string.hpp  gettext.hpp  host_buffer.hpp  host_document.hpp  host_document_info.hpp  host_user_table.hpp  insert_operation.hpp  insert_record.hpp  jupiter_algorithm.hpp  jupiter_client.hpp  jupiter_error.hpp  jupiter_server.hpp  jupiter_undo.hpp  line.hpp  local_buffer.hpp  local_document.hpp  local_document_info.hpp  no_operation.hpp  operation.hpp  position.hpp  (+19 more)
inc/serialise/: attribute.hpp  error.hpp  object.hpp  parser.hpp  token.hpp
jupiter/: TODO  base_file  jupiter.cpp
m4/: Makefile.am  ac_check_gmp.m4
po/: LINGUAS  Makevars  POTFILES.in  ast.po  ca.po  da.po  de.po  en_GB.po  es.po  fr.po  it.po  nl.po  obby.pot  oc.po  pt_BR.po  sv.po  uk.po
src/: Makefile.am  buffer.cpp  chat.cpp  client_buffer.cpp  client_document.cpp  client_document_info.cpp  client_user_table.cpp  colour.cpp  command.cpp  common.cpp  delete_operation.cpp  delete_record.cpp  delete_undo_operation.cpp  document.cpp  document_info.cpp  document_packet.cpp  duplex_signal.cpp  duplexsignal.cpp  error.cpp  format_string.cpp  host_buffer.cpp  host_document.cpp  host_document_info.cpp  host_user_table.cpp  insert_operation.cpp  insert_record.cpp  jupiter_algorithm.cpp  jupiter_client.cpp  jupiter_error.cpp  jupiter_server.cpp  jupiter_undo.cpp  line.cpp  local_buffer.cpp  local_document.cpp  local_document_info.cpp  no_operation.cpp  operation.cpp  position.cpp  ptr_iterator.cpp  record.cpp  (+17 more)
src/serialise/: Makefile.am  attribute.cpp  error.cpp  object.cpp  parser.cpp  token.cpp
test/: 2buffer.cpp  Makefile  Makefile.am  base_file  buffer.cpp  bufferd.cpp  curses.cpp  discover.cpp  jupiter.cpp  line.cpp  record.cpp  ring.cpp  rsa.cpp  serialise.cpp  test_jupiter.cpp  text.cpp
tools/: mkenum.rb
