pkginclude_HEADERS =  common.hpp
pkginclude_HEADERS += position.hpp
pkginclude_HEADERS += duplex_signal.hpp
pkginclude_HEADERS += user.hpp
pkginclude_HEADERS += record.hpp
pkginclude_HEADERS += delete_record.hpp
pkginclude_HEADERS += insert_record.hpp
pkginclude_HEADERS += user_table.hpp
pkginclude_HEADERS += client_user_table.hpp
pkginclude_HEADERS += server_user_table.hpp
pkginclude_HEADERS += host_user_table.hpp
pkginclude_HEADERS += line.hpp
pkginclude_HEADERS += document.hpp
pkginclude_HEADERS += client_document.hpp
pkginclude_HEADERS += server_document.hpp
pkginclude_HEADERS += host_document.hpp
pkginclude_HEADERS += buffer.hpp
pkginclude_HEADERS += client_buffer.hpp
pkginclude_HEADERS += server_buffer.hpp
pkginclude_HEADERS += host_buffer.hpp

if WITH_HOWL
pkginclude_HEADERS += zeroconf.hpp
endif

