pkginclude_HEADERS =  common.hpp
pkginclude_HEADERS += format_string.hpp
pkginclude_HEADERS += error.hpp
pkginclude_HEADERS += position.hpp
pkginclude_HEADERS += duplex_signal.hpp
pkginclude_HEADERS += ptr_iterator.hpp
nobase_pkginclude_HEADERS =  serialise/error.hpp
nobase_pkginclude_HEADERS += serialise/token.hpp
nobase_pkginclude_HEADERS += serialise/attribute.hpp
nobase_pkginclude_HEADERS += serialise/object.hpp
nobase_pkginclude_HEADERS += serialise/parser.hpp
pkginclude_HEADERS += vector_time.hpp
pkginclude_HEADERS += rsa.hpp
pkginclude_HEADERS += sha1.hpp
pkginclude_HEADERS += user.hpp
pkginclude_HEADERS += user_table.hpp
pkginclude_HEADERS += line.hpp
pkginclude_HEADERS += document.hpp
pkginclude_HEADERS += operation.hpp
pkginclude_HEADERS += no_operation.hpp
pkginclude_HEADERS += split_operation.hpp
pkginclude_HEADERS += insert_operation.hpp
pkginclude_HEADERS += delete_operation.hpp
pkginclude_HEADERS += delete_undo_operation.hpp
pkginclude_HEADERS += record.hpp
pkginclude_HEADERS += jupiter_algorithm.hpp
pkginclude_HEADERS += jupiter_client.hpp
pkginclude_HEADERS += jupiter_server.hpp
pkginclude_HEADERS += document_packet.hpp
pkginclude_HEADERS += document_info.hpp
pkginclude_HEADERS += local_document_info.hpp
pkginclude_HEADERS += client_document_info.hpp
pkginclude_HEADERS += server_document_info.hpp
pkginclude_HEADERS += host_document_info.hpp
pkginclude_HEADERS += buffer.hpp
pkginclude_HEADERS += local_buffer.hpp
pkginclude_HEADERS += client_buffer.hpp
pkginclude_HEADERS += server_buffer.hpp
pkginclude_HEADERS += host_buffer.hpp

if WITH_HOWL
pkginclude_HEADERS += zeroconf.hpp
endif

noinst_HEADERS = gettext.hpp

